@startuml

title __VALIDATIONS's Class Diagram__\n

  namespace  {
    namespace u.tehsystem.demo {
      namespace model {
        namespace validations {
          interface ru.tehsystem.demo.model.validations.IsEmailRegistered {
              {abstract} + groups()
              {abstract} + message()
              {abstract} + payload()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace u.tehsystem.demo {
      namespace model {
        namespace validations {
          class ru.tehsystem.demo.model.validations.IsEmailRegisteredValidator {
              + initialize()
              + isValid()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace u.tehsystem.demo {
      namespace model {
        namespace validations {
          interface ru.tehsystem.demo.model.validations.IsPasswordMatching {
              {abstract} + groups()
              {abstract} + message()
              {abstract} + payload()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace u.tehsystem.demo {
      namespace model {
        namespace validations {
          class ru.tehsystem.demo.model.validations.IsPasswordMatchingValidator {
              + initialize()
              + isValid()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace u.tehsystem.demo {
      namespace model {
        namespace validations {
          interface ru.tehsystem.demo.model.validations.IsUsernameTaken {
              {abstract} + groups()
              {abstract} + message()
              {abstract} + payload()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace u.tehsystem.demo {
      namespace model {
        namespace validations {
          class ru.tehsystem.demo.model.validations.IsUsernameTakenValidator {
              + initialize()
              + isValid()
          }
        }
      }
    }
  }
  

  ru.tehsystem.demo.model.validations.IsEmailRegisteredValidator .up.|> javax.validation.ConstraintValidator
  ru.tehsystem.demo.model.validations.IsEmailRegisteredValidator o-- ru.tehsystem.demo.services.impl.UserService : userService
  ru.tehsystem.demo.model.validations.IsPasswordMatchingValidator .up.|> javax.validation.ConstraintValidator
  ru.tehsystem.demo.model.validations.IsUsernameTakenValidator .up.|> javax.validation.ConstraintValidator
  ru.tehsystem.demo.model.validations.IsUsernameTakenValidator o-- ru.tehsystem.demo.services.impl.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
